# phpredis

./: .gitignore  CMakeLists.txt  common.h  library.c  redis.c
tests/: RedisTest.php
